:sparkles: Implemented media page
